# teo-configuration-files

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
scripts/: CMakeLists.txt
scripts/bash/: teoSim
scripts/gnome/: teo-apps.desktop
share/: CMakeLists.txt
share/applications/: teoBase.xml  teoSimBase.xml  teoSimTools.xml  teoSimWorld.xml  teoTools.xml
share/applications/yarpmanager/: teoSimBase.xml  teoSimTools.xml  teoTools.xml
share/applications/yarpmotorgui/: teo-yarpmotorgui.ini  teoSim.ini
share/buses/: pcan-left-arm.ini  pcan-right-arm.ini  pcan-right-leg.ini
share/contexts/kinematics/: README.md  fixedTrunk-head.ini  fixedTrunk-leftArm-fetch-kinematics.ini  fixedTrunk-rightArm-fetch.ini  leftLeg.ini  rightLeg-kinematics.ini  rightLeg.ini  teo-fixedTrunk-arms-fetch.ini  teo-fixedTrunk-depth.ini  teo-fixedTrunk-head.ini  teo-fixedTrunk-leftArm-fetch.ini  teo-fixedTrunk-rightArm-fetch.ini  teo-leftLeg.ini  teo-rightLeg.ini  teo-trunk-arms-fetch.ini  teo-trunk-depth.ini  teo-trunk-head.ini  teo-trunk-leftArm-fetch.ini  teo-trunk-rightArm-fetch.ini  trunk-head.ini  trunk-leftArm-fetch.ini  trunk-rightArm-fetch.ini
share/contexts/launchCanBus/: leftArm-jr3.ini  leftLeg-jr3.ini  locomotion-leftLeg.ini  locomotion-no-trunk.ini  locomotion-noTrunk.ini  locomotion-right-leg.ini  locomotion-rightLeg.ini  locomotion.ini  manipulation-dextra.ini  manipulation-lacquey.ini  manipulation-left-arm.ini  manipulation-leftArm-dextra.ini  manipulation-leftArm-lacquey.ini  manipulation-leftArm.ini  manipulation-no-head.ini  manipulation-noHead.ini  manipulation-right-arm.ini  manipulation-rightArm-dextra.ini  manipulation-rightArm-lacquey.ini  manipulation-rightArm.ini  manipulation-softNeck.ini  manipulation.ini  rightArm-jr3.ini  rightLeg-jr3.ini  softNeck.ini  wholeBody-dextra.ini  wholeBody-lacquey.ini  wholeBody.ini
share/contexts/launchManipulation/: launchManipulation.ini
share/joints/: axial-left-hip.ini  axial-left-shoulder.ini  axial-left-wrist.ini  axial-neck.ini  axial-right-hip.ini  axial-right-shoulder.ini  axial-right-wrist.ini  axial-trunk.ini  frontal-left-elbow.ini  frontal-left-knee.ini  frontal-left-shoulder.ini  frontal-left-wrist.ini  frontal-neck.ini  frontal-right-elbow.ini  frontal-right-hip.ini  frontal-right-knee.ini  frontal-trunk.ini  joint-alh.ini  joint-als.ini  joint-alw.ini  joint-an.ini  joint-arh.ini  joint-ars.ini  joint-arw.ini  joint-at.ini  joint-fla.ini  joint-fle.ini  joint-flh.ini  joint-flk.ini  joint-fls.ini  joint-flw.ini  joint-fn.ini  joint-fra.ini  joint-fre.ini  joint-frh.ini  joint-frk.ini  joint-frs.ini  joint-frw.ini  joint-ft.ini  joint-sla.ini  (+8 more)
share/kinematics/: CMakeLists.txt  README.md  fixedTrunk-head-kinematics.ini  fixedTrunk-leftArm-fetch-kinematics.ini  fixedTrunk-leftLeg-kinematics.ini  fixedTrunk-rightArm-fetch-kinematics.ini  fixedTrunk-rightLeg-kinematics.ini  headKinematics.ini  leftArmKinematics-fetch.ini  leftArmKinematics.ini  leftLeg-kinematics.ini  leftLegKinematics.ini  rightArmKinematics-fetch.ini  rightArmKinematics.ini  rightLegKinematics.ini  trunk-head-kinematics.ini  trunk-leftArm-fetch-kinematics.ini  trunk-rightArm-fetch-kinematics.ini  trunkAndHeadKinematics.ini  trunkAndLeftArmKinematics.ini  trunkAndRightArmKinematics.ini  trunkKinematics.ini
share/launch/: locomotion-left-leg.ini  locomotion-no-trunk.ini  locomotion-right-leg.ini  locomotion.ini  manipulation-left-arm.ini  manipulation-no-head.ini  manipulation-right-arm.ini  manipulation.ini
share/launchLocomotion/: CMakeLists.txt
share/launchLocomotion/conf/: launchLocomotion.ini
share/launchManipulation/: CMakeLists.txt
share/launchManipulation/conf/: launchManipulation.ini
share/nodes/: id-1-ipos.ini  id-10-ipos.ini  id-101-cui.ini  id-107-cui.ini  id-11-ipos.ini  id-112-cui.ini  id-118-cui.ini  id-12-ipos.ini  id-122-cui.ini  id-126-cui.ini  id-13-ipos.ini  id-14-ipos.ini  id-15-ipos.ini  id-16-ipos.ini  id-17-ipos.ini  id-18-ipos.ini  id-19-ipos.ini  id-2-ipos.ini  id-20-ipos.ini  id-21-ipos.ini  id-22-ipos.ini  id-23-ipos.ini  id-24-ipos.ini  id-25-ipos.ini  id-26-ipos.ini  id-27-ipos.ini  id-28-ipos.ini  id-3-ipos.ini  id-4-ipos.ini  id-5-ipos.ini  id-6-ipos.ini  id-7-ipos.ini  id-8-ipos.ini  id-9-ipos.ini  id1-ipos.ini  id10-ipos.ini  id103-cui.ini  id104-cui.ini  id105-cui.ini  id106-cui.ini  (+75 more)
share/robots/teo/: broker.xml  config.ini  config.xml  global.xml  test.ini
share/robots/teo/brokers/: common.xml  leftArm.xml  leftArmTrunk.xml  leftLeg.xml  locomotion.xml  manipulation.xml  manipulationTrunk.xml  rightArm.xml  rightArmTrunk.xml  rightLeg.xml  wholeBody.xml
share/robots/teo/buses/: common-pcan.xml  common-socket.xml  pcan-left-leg.ini  pcan-leftArm.ini  pcan-leftArm.xml  pcan-leftLeg.ini  pcan-leftLeg.xml  pcan-rightArm.ini  pcan-rightArm.xml  pcan-rightLeg.ini  pcan-rightLeg.xml  socket-leftArm.ini  socket-leftArm.xml  socket-leftLeg.ini  socket-leftLeg.xml  socket-rightArm.ini  socket-rightArm.xml  socket-rightLeg.ini  socket-rightLeg.xml
share/robots/teo/calibrators/: generic.ini
share/robots/teo/includes/: leftArm.xml  leftArmBus.xml  leftArmNodes.xml  leftLegBus.xml  rightArmBus.xml  rightLegBus.xml
share/robots/teo/joints/: axial-left-shoulder.ini  axial-left-wrist.ini  frontal-left-ankle.ini  frontal-neck.ini  (+2 more)
share/teo/joints/: axial-right-wrist.ini  frontal-left-hip.ini  frontal-right-ankle.ini  frontal-right-wrist.ini  sagittal-right-ankle.ini  sagittal-right-hip.ini
share/teo/nodes/: id101-cui.ini  id102-cui.ini  id11-ipos.ini  id111-cui.ini  id112-cui.ini  id115-cui.ini  id118-cui.ini  id119-cui.ini  id123-cui.ini  id125-cui.ini  id14-ipos.ini  id18-ipos.ini  id23-ipos.ini  id24-ipos.ini  id26-ipos.ini  id27-ipos.ini  id3-ipos.ini  id7-ipos.ini
share/teoBase/: CMakeLists.txt
share/teoBase/scripts/: teoBase.xml
share/teoSimBase/: CMakeLists.txt
share/teoSimBase/scripts/: teoSimBase.xml
share/teoTools/: CMakeLists.txt
share/teoTools/scripts/: teoTools.xml
share/yarpmanager/: teoTools.xml
share/yarpmotorgui/: CMakeLists.txt  teo.ini  teoSim.ini
(+240 files in other folders)
